update hide keyboard when click out view parent and add imeOption for edittext

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,6 +7,7 @@
     tools:context=".view.LoginFragment">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/viewParent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -29,6 +30,8 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/username"
+                android:imeOptions="actionNext"
+                android:singleLine="true"
                 android:textSize="18sp" />
 
             <EditText
@@ -37,6 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:hint="@string/password"
+                android:imeOptions="actionDone"
+                android:singleLine="true"
                 android:textSize="18sp" />
 
             <Button
